--- a/app/views/fortitude_rails/components/_typography.html.haml
+++ b/app/views/fortitude_rails/components/_typography.html.haml
@@ -1,125 +1,6 @@
-.layout__item><
-  %h2.text-black-light.xs-beta.xs-inset2 Typography
-  %hr.text-gray-light.xs-pth0.xs-mb2
-.layout__item.md-4of12.xs-mb2><
-  %h3.text-black-light.xs-gamma.xs-mb0h Responsive Fonts
-  %p.xs-ptb1 Font sizing is responsive - when you use one fo these font sizes, it overrides the normal font size for that element (regardless of h1, h2, etc) and uses a font size appropriate for the grid size you're operating on.
-  %pre
-    %code.scss
-      :preserve
-          The format is .<breakpoint>-<font-size> The breakpoints are as follows:
-          -alpha    // largest font, 3.6rem by default
-          -beta     // 3.0rem
-          -gamma    // 2.4rem
-          -delta    // 1.8rem
-          -epsilon  // 1.4rem
-          -zeta     // 1.0rem
-  %p.xs-ptb1
-    Some HAML examples
-    %pre
-      %code.haml
-        :preserve
-            .xs-alpha Alpha font size on all screens
-            .md-gamma Gamma font size on medium screens
-            .xl-alpha.md-delta.zs-epsilon
-              Huge on gigantic screens
-              medium on medium screens
-              slightly bigger than body
-              font on smallest screens
-.layout__item.md-4of12.xs-mb2><
-  %h3.text-black-light.xs-gamma.xs-mb0h Font Colors
-  %p.xs-ptb1 We use several classes for styling fonts, as appropriate for the UI
-  %p.text-black-light Light black text: .text-black-light
-  %p.text-black-dark Dark black text: .text-black-dark
-  %p.text-gray Gray text: .text-gray
-  %p.text-gray-light Light gray text: .text-gray-light
-  %p.text-gray-dark Dark gray text: .text-gray-dark
-  .box--black-dark.xs-mtb1
-    %p.text-white-light Light white text: .text-white-light
-    %p.text-white-dark Dark white text: .text-white-dark
-  %p.text-meta Meta text: .text-meta
-  %p.text-green Green text: .text-green
-  %p.text-red Red text: .text-red
-  %p.text-orange Orange text: .text-orange
-.layout__item.md-4of12.xs-mb2
-  %h3.text-black-light.xs-gamma.xs-mbh0 Font Styles
-  %p.text-light Light text: .text-light
-  %p.text-book Book text: .text-book
-  %p.text-medium Medium text: .text-medium
-  %p.text-bold Bold text: .text-bold
-  %p.text-opacity50 Text opacity: .text-opacity(25|50|75)
-  %p.text-ellipses
-    Ellipses: .text-ellipses
-    %br
-    Will hide any overflowing text and truncate it with an ellipses
-  %p
-    .text-line-through Line through
-    \.text-line-through
-  %p.text-italic Italic text: .text-italic
-  %p.text-uppercase Uppercase text: .text-uppercase
-
-  %h5.text-black-light.xs-gamma.xs-inset2 Content Styles
-  %p These styles are set on a block, and set the style for text elements inside them (h1, h2, a, p, etc)
-  %pre
-    %code.scss
-      :preserve
-          .content--muted
-          .content--white-light
-          .content--black-dark
-
-.layout__item.xs-mb1><
-  %h2.text-black-light.xs-beta.xs-mbh0 Paragraph styles
-  %p.xs-mbh0 We have a couple useful styles for different kinds of paragraphs.
-  %pre
-    %code.scss
-      :preserve
-        .p--short // smaller text & line height
-        .p--tall  // larger text & line height
-        .p--micro // tiny text & line height
-        .p--lead  // weighter text, larger text & line height
-        // combined variants
-        .p--lead.p--tall
-        .p--lead.p--short
-        .p--micro.p--tall
-        .p--micro.p--short
-
-.layout__item.sm-4of12.xs-mb1><
-  %p.p--lead.p--tall
-    %strong Lead & Tall:
-    The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog.
-.layout__item.sm-4of12.xs-mb1><
-  %p.p--lead
-    %strong Lead:
-    The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog.
-.layout__item.sm-4of12.xs-mb1><
-  %p.p--lead.p--short
-    %strong Lead & Short:
-    The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog.
-
-
-.layout__item.sm-4of12.xs-mbh0><
-  %p.p--tall
-    %strong Tall:
-    The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog.
-.layout__item.sm-4of12.xs-mbh0><
-  %p
-    %strong Default:
-    The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog.
-.layout__item.sm-4of12.xs-mbh0><
-  %p.p--short
-    %strong Short:
-    The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog.
-
-
-.layout__item.sm-4of12.xs-mb1><
-  %p.p--micro.p--tall
-    %strong Micro & Tall:
-    The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog.
-.layout__item.sm-4of12.xs-mb1><
-  %p.p--micro
-    %strong Micro:
-    The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog.
-.layout__item.sm-4of12.xs-mb1><
-  %p.p--micro.p--short
-    %strong Micro & Short:
-    The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog.
+.library__anchor-helper#typography
+%section.library__section
+  %h2 Typography
+  .content--markdown
+    :markdown
+      Typography includes all of your textual needs, from structural `p` and `ul` tags to visual `strong` and `a` tags.
