remove old landing pages, structure nav, change examples to README

--- a/lib/generators/fortitude_rails/templates/directory_structure/api/tools/_functions.scss.tt
+++ b/lib/generators/fortitude_rails/templates/directory_structure/api/tools/_functions.scss.tt
@@ -1,5 +1,4 @@
-// pull in upstream helper functions without the $fortitude-* prefix
-@import 'fortitude/api/tools/functions/without-namespace';
+@import "fortitude/api/tools/functions/without-namespace";
 
 // @function calculateSomethingSpecific { }
 //
