--- a/lib/generators/fortitude_rails/templates/directory_structure/api/tools/_mixins.scss.tt
+++ b/lib/generators/fortitude_rails/templates/directory_structure/api/tools/_mixins.scss.tt
@@ -1,4 +1,4 @@
-@import 'fortitude/api/tools/mixins/without-namespace';
+@import "fortitude/api/tools/mixins/without-namespace";
 
 // @mixin sprite-icon { }
 //
