--- a/lib/generators/fortitude_rails/install/templates/directory_structure/api/tools/_mixins.scss.tt
+++ b/lib/generators/fortitude_rails/install/templates/directory_structure/api/tools/_mixins.scss.tt
@@ -1,4 +1,5 @@
-@import "fortitude/api/tools/mixins/without-namespace";
+@import "fortitude/api/tools/mixins/without-namespace"; // grab all component mixins
+@import "fortitude_rails/api/tools/mixins"; // grab all responsive helpers
 
 // @mixin sprite-icon { }
 //
