--- a/app/assets/stylesheets/fortitude_rails/api/tools/mixins/_display.scss.erb
+++ b/app/assets/stylesheets/fortitude_rails/api/tools/mixins/_display.scss.erb
@@ -1,35 +1,35 @@
 <% FortitudeRails.breakpoint_names.each do |size| %>
 
 @mixin <%= size %>-none {
-  display: none !important;
+  display: none;
 }
 
 @mixin <%= size %>-inline {
-  display: inline !important;
+  display: inline;
 }
 
 @mixin <%= size %>-inline-block {
-  display: inline-block !important;
+  display: inline-block;
 }
 
 @mixin <%= size %>-block {
-  display: block !important;
+  display: block;
 }
 
 @mixin <%= size %>-table {
-  display: table !important;
+  display: table;
 }
 
 @mixin <%= size %>-table-cell {
-  display: table-cell !important;
+  display: table-cell;
 }
 
 @mixin <%= size %>-table-column {
-  display: table-column !important;
+  display: table-column;
 }
 
 @mixin <%= size %>-inherit {
-  display: inherit !important;
+  display: inherit;
 }
 
 <% end %>
